--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
       text-align: center;
     }
     nav {
-      background: #005599;
-      text-align: center;
-      padding: 10px;
+     <nav>
+  <a href="index.html">Startseite</a>
+  <a href="ueber-uns.html">Über uns</a>
+  <a href="#leistungen">Leistungen</a>
+  <a href="#buchung">Buchung</a>
+  <a href="#kontakt">Kontakt</a>
+</nav>
+
     }
     nav a {
       color: white;
