--- a/index.html
+++ b/index.html
@@ -18,14 +18,9 @@
       text-align: center;
     }
     nav {
-     <nav>
-  <a href="index.html">Startseite</a>
-  <a href="ueber-uns.html">Über uns</a>
-  <a href="#leistungen">Leistungen</a>
-  <a href="#buchung">Buchung</a>
-  <a href="#kontakt">Kontakt</a>
-</nav>
-
+      background: #005599;
+      text-align: center;
+      padding: 10px;
     }
     nav a {
       color: white;
@@ -64,6 +59,11 @@
   </header>
 
   <nav>
+    <a href="index.html">Startseite</a>
+    <a href="ueber-uns.html">Über uns</a>
+    <a href="galerie.html">Galerie</a>
+    <a href="preise.html">Preise</a>
+    <a href="bewertungen.html">Bewertungen</a>
     <a href="#leistungen">Leistungen</a>
     <a href="#buchung">Buchung</a>
     <a href="#kontakt">Kontakt</a>
@@ -136,3 +136,4 @@
   </script>
 </body>
 </html>
+
