--- a/galerie.html
+++ b/galerie.html
@@ -65,12 +65,12 @@
   </nav>
 
   <section class="gallery">
-    <img src="https://source.unsplash.com/featured/?cleaning" alt="Reinigung">
-    <img src="https://source.unsplash.com/featured/?gardening" alt="Gartenpflege">
-    <img src="https://source.unsplash.com/featured/?handyman" alt="Reparatur">
-    <img src="https://source.unsplash.com/featured/?lawn" alt="Rasenpflege">
-    <img src="https://source.unsplash.com/featured/?snow" alt="Winterdienst">
-    <img src="https://source.unsplash.com/featured/?tools" alt="Werkzeuge">
+    <img src="https://via.placeholder.com/600x400?text=Treppenhausreinigung" alt="Hausprofi Bild">
+    <img src="https://via.placeholder.com/600x400?text=Gartenpflege" alt="Hausprofi Bild">
+    <img src="https://via.placeholder.com/600x400?text=Reparaturen" alt="Hausprofi Bild">
+    <img src="https://via.placeholder.com/600x400?text=Winterdienst" alt="Hausprofi Bild">
+    <img src="https://via.placeholder.com/600x400?text=Rasenpflege" alt="Hausprofi Bild">
+    <img src="https://via.placeholder.com/600x400?text=Hausmeisterservice" alt="Hausprofi Bild">
   </section>
 
   <footer>
