--- a/galerie.html
+++ b/galerie.html
@@ -65,12 +65,12 @@
   </nav>
 
   <section class="gallery">
-    <img src="https://via.placeholder.com/600x400?text=Treppenhausreinigung" alt="Hausprofi Bild">
-    <img src="https://via.placeholder.com/600x400?text=Gartenpflege" alt="Hausprofi Bild">
-    <img src="https://via.placeholder.com/600x400?text=Reparaturen" alt="Hausprofi Bild">
-    <img src="https://via.placeholder.com/600x400?text=Winterdienst" alt="Hausprofi Bild">
-    <img src="https://via.placeholder.com/600x400?text=Rasenpflege" alt="Hausprofi Bild">
-    <img src="https://via.placeholder.com/600x400?text=Hausmeisterservice" alt="Hausprofi Bild">
+    <img src="img/cleaning.jpg" alt="cleaning.jpg">
+    <img src="img/gardening.jpg" alt="gardening.jpg">
+    <img src="img/repairs.jpg" alt="repairs.jpg">
+    <img src="img/winter.jpg" alt="winter.jpg">
+    <img src="img/lawn.jpg" alt="lawn.jpg">
+    <img src="img/tools.jpg" alt="tools.jpg">
   </section>
 
   <footer>
