--- a/galerie.html
+++ b/galerie.html
@@ -65,12 +65,12 @@
   </nav>
 
   <section class="gallery">
-    <img src="img/cleaning.jpg" alt="cleaning.jpg">
-    <img src="img/gardening.jpg" alt="gardening.jpg">
-    <img src="img/repairs.jpg" alt="repairs.jpg">
-    <img src="img/winter.jpg" alt="winter.jpg">
-    <img src="img/lawn.jpg" alt="lawn.jpg">
-    <img src="img/tools.jpg" alt="tools.jpg">
+    <img src="cleaning.jpg" alt="Reinigung">
+    <img src="gardening.jpg" alt="Gartenpflege">
+    <img src="repairs.jpg" alt="Reparaturen">
+    <img src="winter.jpg" alt="Winterdienst">
+    <img src="lawn.jpg" alt="Rasenpflege">
+    <img src="tools.jpg" alt="Werkzeuge">
   </section>
 
   <footer>
