Update galerie.html fortare rediploy Netlify

--- a/galerie.html
+++ b/galerie.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <header>
-    <h1>Galerie</h1>
+    <h1>Galerie !</h1>
     <p>Einblicke in unsere Arbeit – HausproFix24</p>
   </header>
 
