--- a/galerie.html
+++ b/galerie.html
@@ -5,48 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galerie - HausproFix24</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to bottom right, #e0e0e0, #f4f4f4);
-    }
-    header {
-      background: #003366;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      background: #005599;
-      text-align: center;
-      padding: 10px;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .gallery img {
-      width: 100%;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    }
-    footer {
-      background: #003366;
-      color: white;
-      text-align: center;
-      padding: 10px;
-      margin-top: 40px;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0;
+      background: linear-gradient(to bottom right, #e0e0e0, #f4f4f4); }
+    header { background: #003366; color: white; padding: 20px; text-align: center; }
+    nav { background: #005599; text-align: center; padding: 10px; }
+    nav a { color: white; margin: 0 15px; text-decoration: none; }
+    .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px; padding: 20px; max-width: 1000px; margin: auto; }
+    .gallery img { width: 100%; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.2); }
+    footer { background: #003366; color: white; text-align: center; padding: 10px; margin-top: 40px; }
   </style>
 </head>
 <body>
@@ -54,7 +21,6 @@
     <h1>Galerie !</h1>
     <p>Einblicke in unsere Arbeit – HausproFix24</p>
   </header>
-
   <nav>
     <a href="index.html">Startseite</a>
     <a href="ueber-uns.html">Über uns</a>
@@ -63,7 +29,6 @@
     <a href="bewertungen.html">Bewertungen</a>
     <a href="index.html#kontakt">Kontakt</a>
   </nav>
-
   <section class="gallery">
     <img src="cleaning.jpg" alt="Reinigung">
     <img src="gardening.jpg" alt="Gartenpflege">
@@ -72,7 +37,6 @@
     <img src="lawn.jpg" alt="Rasenpflege">
     <img src="tools.jpg" alt="Werkzeuge">
   </section>
-
   <footer>
     &copy; 2025 HausproFix24 – Alle Rechte vorbehalten
   </footer>
