--- a/galerie.html
+++ b/galerie.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <h1>Galerie !</h1>
+    <h1>Galerie</h1>
     <p>Einblicke in unsere Arbeit – HausproFix24</p>
   </header>
   <nav>
@@ -32,10 +32,10 @@
   <section class="gallery">
     <img src="cleaning.jpg" alt="Reinigung">
     <img src="gardening.jpg" alt="Gartenpflege">
-    <img src="repairs.jpg" alt="Reparaturen">
-    <img src="winter.jpg" alt="Winterdienst">
     <img src="lawn.jpg" alt="Rasenpflege">
+    <img src="repairs.jpg" alt="Reparaturen">
     <img src="tools.jpg" alt="Werkzeuge">
+    <img src="winter.jpg" alt="Winterdienst">
   </section>
   <footer>
     &copy; 2025 HausproFix24 – Alle Rechte vorbehalten
